refactored createUser fn , mail fn added
