# src/components/user/user.controller.ts
@@ -1,20 +1,53 @@
 /* eslint-disable @typescript-eslint/naming-convention */
 import httpStatus from 'http-status';
 import { Request, Response } from 'express';
+import bcrypt from 'bcrypt';
+import config from '@config/config';
+import { sendEmailMiddleware } from '@core/middlewares/nodemailer';
 import { IUser } from '@components/user/user.interface';
 import { create } from '@components/user/user.service';
 import { user } from '@components/user/user.model';
 import { address } from './userAddress.model';
 
+function generateRandomPassword(length = 8) {
+  // Define character sets for different types of characters
+  const lowercaseChars = 'abcdefghijklmnopqrstuvwxyz';
+  const uppercaseChars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+  const numericChars = '0123456789';
+  const specialChars = '!@#$%^&*()-_=+[]{}|;:,.<>?';
+
+  // Combine character sets based on your requirements
+  const allChars =
+    lowercaseChars + uppercaseChars + numericChars + specialChars;
+
+  let password = '';
+
+  // Generate the password
+  // eslint-disable-next-line no-plusplus
+  for (let i = 0; i < length; i++) {
+    const randomIndex = Math.floor(Math.random() * allChars.length);
+    password += allChars.charAt(randomIndex);
+  }
+
+  return password;
+}
+
 const createUser = async (req: Request, res: Response) => {
   try {
     const newUser = req.body as IUser;
+    const subject = 'Welcome to EYE-EYE-TEE';
+    const password = generateRandomPassword();
+    const mail = `${newUser.email}`;
+    const text = `Your credentials are :- \n username : ${newUser.DesignerId} \n password: ${password}`;
+    const salt = await bcrypt.genSalt(Number(config.salt));
+    const hashPassword = await bcrypt.hash(password, salt);
     const check = await user.find({ email: newUser.email });
     // console.log(check, 'here');
     if (check.length === 0 || !check) {
+      newUser.password = hashPassword;
       await create(newUser);
       res.status(httpStatus.CREATED);
-      return res.send({ message: 'Created' });
+      return sendEmailMiddleware(req, res, mail, subject, text);
     }
     return res.status(201).send({ message: 'User already exists' });
   } catch (err) {
